--- a/index.html
+++ b/index.html
@@ -3,27 +3,84 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>大米粥航天</title>
+    <title>记忆回廊</title>
   </head>
   <body>
-    <a href="#">首页</a>
-
-    <a href="about.html" target="_blank">关于</a>
-
-    <a href="blog.html" target="_blank">博客</a>
-
-    <a href="secret.html" target="_blank">好东西</a>
-
-    <h1>欢迎来到大米粥航天</h1>
-
-    <img src="logo.jpg" alt="大米粥航天logo" width="200" />
-
-    <p>
-      这是一个关于大米粥航天的小网站。大米粥还在开发它，它还<strong>不完善</strong>，但已有基本功能。
-    </p>
-
+    <a href="http://dmzht.top">官网</a>
+    <h1>记忆回廊</h1>
+    <p>欢迎进入我的记忆回廊。。。</p>
+    <p>这里记录了我过去的一些记忆，希望它们能给你带来一些快乐。</p>
+    <p><em>ps：死去的记忆疯狂攻击我（JYB）</em></p>
+    <h2>
+      正文（0代表空行，源文件请到网站代码文件夹下下载，你应该还没忘记密码吧，就在桌面😊😁👍）
+    </h2>
+    <h3>2024年1月27日14：55</h3>
+    <?xml version="1.0" encoding="utf-8"?><ActivityCopyPaste
+      fontsize="12"
+      fontfamily="Verdana"
+      xmlns="http://www.ni.com/ActivityRichTextDocument.xsd"
+      ><p>Javis</p>
+      <p>Jarvis  2020，08，11，早。    </p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>1111</p>
+      <p>你好！未来的张子周，你成绩还好吗？还喜欢高心怡吗？</p>
+      <p>0</p>
+      <p>好，还喜欢。2020，08，11.</p>
+      <p>0</p>
+      <p>还有，你那个时候不戴眼镜！</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>0</p>
+      <p>256</p>
+      <p>0</p>
+      <p>
+        20？？年的张子周，你成绩还好吗？还喜欢高心怡吗？眼镜度数多少了？2020，08，11.
+      </p>
+      <p>0</p>
+      <p>2022.7.21早</p>
+      <p>好，级部第一。</p>
+      <p>永远喜欢。</p>
+      <p>250。</p>
+      <p>还有，我毕业了。</p>
+      <p>0</p>
+      <p>
+        20？？年的张子周，你成绩还好吗？还喜欢高心怡吗？眼镜度数多少了？2022，07，21.
+      </p>
+      <p>0</p>
+      <p>
+        好，两次级部第一，一次第二，一次第三。不喜欢了，我很抱歉，我现在不想喜欢任何人，我可能有点喜欢姜思含，上初中后，她成绩很好，高心怡掉到了中游，这可能也是我不喜欢她了的一个原因吧，我和姜思含没有任何联系（现在），我不想伤害她，也不想伤害我自己，下一年也许就说不定了呢，对了，我想把这个页面做成网站，加油吧，新的一年，张子周，yyds！😊2024，01，26，11：46.对了，600度。
+      </p>
+      <p>0</p>
+      <p>
+        20？？年的张子周，你成绩还好吗？现在喜欢谁？眼镜度数多少了？2024，01，26，11：47.
+      </p>
+      <p>0</p>
+      <p>0</p>
+      <p>666</p></ActivityCopyPaste
+    >
+    <h3>图片</h3>
+    <p>2020-8-11</p>
+    <img src="2020-8-11.png" alt="2020-8-11" width="500" />
+    <p>2020-8-11我和高心怡</p>
+    <img src="2020-8-11我和高心怡.png" alt="2020-8-11我和高心怡" width="500" />
+    <p>2022-7-21</p>
+    <img src="2022-7-21.png" alt="2022-7-21" width="500" />
+    <p>2024-1-26-11：49</p>
+    <img src="2024-1-26.png" alt="2024-1-26" width="500" />
+    <p>2020-2-10和弟弟玩（ZYZ）</p>
+    <img src="2020-2-10.png" alt="2020-2-10" width="500" />
     <p>Powered by 大米粥航天©2024，code by Big Rice Porridge。</p>
     <p>Have a good time!玩的开心！</p>
-    <a href="apple.html" target="_blank">Think Different</a>
+    <a href="http://dmzht.top/apple.html" target="_blank">Think Different</a>
   </body>
 </html>
